@@ -1215,9 +1215,9 @@ MAP
 2...........-F+-................|-------------------+------------------------
 3...........F..|...FFFF...FFFF....|#####|       |T.....T|                   |
 4..........F-..--.--..--.--..--..--#####--      |.{.T.{.|                   |
-5..........|....|.|....|.|....|..|###|###|      |T.....T|                   |
-6..........F....|-|....|-|....|..+##---##|      |.{.T.{.|                   |
-7..........|....+#+....+#+....|..|###|###|      |T.....T|                   |
+5..........|....|.|....|.|....|..|###|###|--    |T.....T|                   |
+6..........F....|-|....|-|....|..+##---##S.|    |.{.T.{.|                   |
+7..........|....+#+....+#+....|..|###|###|--    |T.....T|                   |
 8..........--..-----..-----..--..--#####--      |.{.T.{.|                   |
 9---------------------------------|#####|------------------------------------
 0----------------------------------------------------------------------------
@@ -1265,6 +1265,9 @@ DOOR:closed,(24,17)
 
 DOOR:closed,(32,16)
 DOOR:locked,(51,12)
+
+TRAP:"statue", (41,16)
+OBJECT:'`',"statue",(41,16),uncursed,"dye savant",1
 
 MONSTER:'@',"sergeant",(12,04)
 MONSTER:'@',"soldier",(12,04)
