@@ -6009,6 +6009,14 @@ struct permonst _mons2[] = {
 	0 /*MM*/, MT_OMNIVORE|MT_PEACEFUL|MT_COLLECT|MT_MAGIC /*MT*/, MF_MARTIAL_B /*MF*/,
 	MB_HUMANOID|MB_STRONG /*MB*/, MG_NOPOLY|MG_INFRAVISIBLE /*MG*/,
 	MA_HUMAN /*MA*/,  MV_NORMAL /*MV*/, 0 /*MW*/, HI_DOMESTIC),
+    MON("dye savant", S_HUMAN,//18
+	LVL(12, 12, 50, 0),  G_NOGEN, 
+	DEF(SPE_AC(10)),
+	A(ATTK(AT_WEAP, AD_PHYS, 4, 4), ATTK(AT_XWEP, AD_PHYS, 4, 4)),
+	SIZ(WT_HUMAN-(WT_HUMAN/4), 400, MS_DYE, MZ_HUMAN), 0, 0,
+	0 /*MM*/, MT_OMNIVORE|MT_PEACEFUL|MT_COLLECT|MT_MAGIC /*MT*/, MF_MARTIAL_B /*MF*/,
+	MB_HUMANOID|MB_FEMALE /*MB*/, MG_NOPOLY|MG_INFRAVISIBLE /*MG*/,
+	MA_HUMAN /*MA*/,  MV_NORMAL /*MV*/, 0 /*MW*/, CLR_BRIGHT_CYAN),
     MON("guard", S_HUMAN,//14 /*Needs encyc entry*/
 	LVL(12, 12, 40, 10),  G_NOGEN,
 	DEF(NAT_AC(0)),
